css/responsive.css
@media screen and (min-width: 64rem) {
  /* Header styles */
  .menu-icon {
    display: none;
  }
}

@media screen and (max-width: 63.9rem) {
  /* Header styles */
  header {
    padding: 0.625rem 1.25rem;
  }

  nav ul,
  nav div .btn-primary {
    display: none;
  }

  /* Hero Section */
  .hero {
    display: flex;
    flex-direction: column;
    gap: 0.625rem;
    align-self: stretch;
    flex-shrink: 0;
    position: relative;
    height: 40rem;
  }

  .hero .left {
    width: 100%;
    padding: 0 0 1rem 0;
    gap: 1.875rem;
    align-items: center;
    justify-content: flex-start;
    align-self: stretch;
    flex-shrink: 0;
    height: 50%;
  }

  .hero .text-wrap h1,
  .hero .text-wrap p {
    width: 100%;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .hero .cta-buttons {
    justify-content: center;
    align-content: center;
  }

  .right {
    width: 100%;
    height: 50%;
  }

  .google {
    top: 0;
    left: 6.87rem;
  }

  .google-ads {
    top: 13.06rem;
    left: 16.25rem;
  }

  .atlassian {
    top: 0;
    left: 19.81rem;
  }

  .paypal {
    top: 6.19rem;
    left: 7rem;
  }

  .weave {
    top: 6.19rem;
    left: 25.88rem;
  }

  .calendar {
    top: 14.31rem;
    left: 32.31rem;
  }

  .asana {
    top: 0;
    left: 33.31rem;
  }

  /*Why Section*/
  .bullet-list {
    display: flex;
    padding: 0 2.125rem;
    align-items: flex-start;
    align-self: stretch;
  }

  /*Pricing Section*/
  .plan-feature-list {
    flex-direction: column;
  }

  .pricing-table {
    height: fit-content;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 0.625rem;
    align-self: stretch;
    width: 100%;
  }

  .plan-card {
    width: 100%;
    display: flex;
    padding: 2.5rem;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 3.125rem;
    align-self: stretch;
  }

  .plan-header {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1.875rem;
    align-self: stretch;
  }

  .plan-divider {
    display: flex;
    height: 0.0625rem;
    padding: 0.625rem;
    align-items: flex-start;
    gap: 0.625rem;
    align-self: stretch;
  }

  /*Hire Us Section*/
  .hire-us-section {
    padding: 1.875rem;
    flex-flow: column;
    align-items: flex-start;
  }

  .hire-us-section .left {
    display: flex;
    justify-content: space-between;
    flex-flow: row;
    padding: 2.5rem 1.875rem 1.25rem 1.875rem;
    gap: 3.75rem;
  }

  .hire-us-section .top {
    flex-shrink: 1;
  }

  .hire-us-section .bottom {
    flex: 1;
  }

  .hire-us-section .right {
    display: flex;
    padding: 1.875rem;
    flex-direction: column;
    align-items: flex-start;
    gap: 0.625rem;
    align-self: stretch;
  }

  /*Footer*/
  footer {
    outline: var(--blue-outline);
    padding: 5rem 1.875rem 2.5rem 1.875rem;
    flex-flow: column;
    align-items: flex-start;
    gap: 2.5rem;
    align-self: stretch;
  }
  .footer-info {
    outline: var(--yellow-outline);
    display: flex;
    align-items: flex-start;
    flex-direction: row;
    gap: 2.5rem;
    align-self: stretch;
  }

  .footer-links {
    outline: var(--green-outline);
    flex-flow: row wrap;
    gap: 0.625rem;
  }

  .footer-links > div {
    outline: var(--orange-outline);
    flex-direction: column;
  }
}

@media screen and (max-width: 47.9rem) {
  /* Hero Section */
  .google {
    top: 0;
    left: 0;
  }

  .google-ads {
    top: 13.06rem;
    left: 6.62rem;
  }

  .atlassian {
    top: 0;
    left: 7.12rem;
  }

  .paypal {
    top: 6.19rem;
    left: 0;
  }

  .weave {
    top: 6.19rem;
    left: 11.5rem;
  }

  .calendar {
    top: 13.69rem;
    left: 14.94rem;
  }

  .asana {
    top: 0;
    left: 15.5rem;
  }

  /*Why Section*/
  .why-section {
    display: flex;
    flex-flow: column nowrap;
    padding-bottom: 3.75rem;
    align-items: flex-start;
    gap: 2.5rem;
    align-self: stretch;
  }

  .why-section .text-wrapper {
    display: flex;
    padding: 0 1rem;
    flex-direction: column;
    align-items: center;
    gap: 0.625rem;
    align-self: stretch;
  }

  .why-section p {
    max-width: 100%;
    align-self: stretch;
  }

  .bullet-list {
    padding: 0 1rem;
    flex-direction: column;
    align-items: flex-start;
    gap: 1.0625rem;
    align-self: stretch;
  }

  .bullet {
    width: 100%;
    flex-direction: row;
    justify-content: flex-start;
    gap: 1.5rem;
    align-self: stretch;
  }

  .bullet .left-wing,
  .bullet .right-wing {
    display: none;
  }

  .bullet span {
    font-size: 1rem;
  }

  /*Pricing Section*/
  .row-one,
  .row-two {
    flex-direction: column;
    align-items: center;
    gap: 1.25rem;
    align-self: stretch;
  }

  .plan-feature-item {
    width: 100%;
    display: flex;
    padding: 1.25rem 0;
    flex-direction: column;
    align-items: flex-start;
    gap: 1.25rem;
    align-self: stretch;
  }

  /*Hire Us Section*/
  .hire-us-section {
  }
}

